; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_path_mkdir.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_apparmor_path_mkdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { i32 }
%struct.dentry = type { i32 }

@OP_MKDIR = common dso_local global i32 0, align 4
@AA_MAY_CREATE = common dso_local global i32 0, align 4
@S_IFDIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.path*, %struct.dentry*, i32)* @apparmor_path_mkdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apparmor_path_mkdir(%struct.path* %0, %struct.dentry* %1, i32 %2) #0 {
  %4 = alloca %struct.path*, align 8
  %5 = alloca %struct.dentry*, align 8
  %6 = alloca i32, align 4
  store %struct.path* %0, %struct.path** %4, align 8
  store %struct.dentry* %1, %struct.dentry** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @OP_MKDIR, align 4
  %8 = load %struct.path*, %struct.path** %4, align 8
  %9 = load %struct.dentry*, %struct.dentry** %5, align 8
  %10 = load i32, i32* @AA_MAY_CREATE, align 4
  %11 = load i32, i32* @S_IFDIR, align 4
  %12 = call i32 @common_perm_create(i32 %7, %struct.path* %8, %struct.dentry* %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @common_perm_create(i32, %struct.path*, %struct.dentry*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
